--- a/source/sass/blocks/copyrights.scss
+++ b/source/sass/blocks/copyrights.scss
@@ -39,5 +39,9 @@
   .copyrights__item {
     text-align: center;
     padding-bottom: 20px;
+    
+    &:last-child {
+      margin-left: 0;
+    }
   }
 }
