--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -11,6 +11,9 @@
   @media (max-width: $tablet-width) {
     width: 94%;
   }
+  @media (max-width: $mobile-width) {
+    width: 90%;
+  }
 }
 
 @mixin main-header {
@@ -231,7 +234,7 @@
   padding: 15px 5%;
   background-color: rgba(255, 255, 255, 0.1);
   width: 90%;
-  color: $white-color;
+  color: $black-color;
 
   &:hover {
     background-color: rgba(255, 255, 255, 0.5);
@@ -240,7 +243,13 @@
   &:active,
   &:focus {
     background-color: rgba(255, 255, 255, 0.9);
+ //   color: $black-color;
   }
+  
+  &::placeholder {
+    @include main-text;
+    color: $white-color;
+  }  
 }
 
 @mixin text-area {
