--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -1,7 +1,7 @@
 .services {
   background-color: $header-bg-color;
   padding-top: 80px;
-  padding-bottom: 60px;
+  padding-bottom: 150px;
 }
 
 .services__wrapper {
@@ -68,5 +68,13 @@
   .services__item {
     width: 100%;
     min-height: 250px;
+  }
+}
+
+@media (max-width: $mobile-width) {
+  .services {
+    background-color: $header-bg-color;
+    padding-top: 80px;
+    padding-bottom: 100px;
   }
 }
