--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -4,6 +4,8 @@ $footer-logo-color: #203c42;
 $grey-color: #788891;
 $white-color: #ffffff;
 $blue-color: #00b2ff;
+$light-blue-color: #00bfff;
+$active-blue-color: #7fc7ff;
 $light-grey: #e5e5e5;
 $border-color: #ebebeb;
 $black-color: #666666;
