--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -53,6 +53,21 @@
   }
 }
 
+.services__button {
+  @include blue-button;
+  position: absolute;
+  width: 63px;
+  height: 63px;
+  bottom: 0;
+  right: 0;
+  z-index: 30;
+  border: none;
+  background-image: url("../../img/icon-more.svg");
+  background-size: 15px 10px;
+  background-repeat: no-repeat;
+  background-position: 50%;
+}
+
 .services__info {
   position: relative;
   color: $white-color;
@@ -68,6 +83,7 @@
   .services__item {
     width: 100%;
     min-height: 250px;
+    margin-right: 30px;
   }
 }
 
