--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -18,17 +18,17 @@
 }
 
 @mixin main-header {
-  font-size: 36px;
+  font-size: 2.25rem;
   font-family: $roboto-mono-bold-font;
   line-height: 51px;
   font-weight: normal;
 
   @media (max-width: $tablet-width) {
-    font-size: 32px;
+    font-size: 2rem;
   }
 
   @media (max-width: $mobile-width) {
-    font-size: 28px;
+    font-size: 1.75rem;
   }
 }
 
@@ -39,7 +39,7 @@
 }
 
 @mixin button-text {
-  font-size: 14px;
+  font-size: 0.875rem;
   font-family: $pt-mono-bold-font;
   line-height: 16px;
   font-weight: bold;
@@ -68,7 +68,7 @@
   font-family: $pt-mono-regular-font;
   color: $white-color;
   background-color: $blue-color;
-  font-size: 16px;
+  font-size: 1rem;
   border: none;
   font-weight: bold;
   text-transform: uppercase;
@@ -150,26 +150,26 @@
 @mixin logo-header {
   font-family: $roboto-mono-bold-font;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 1.5625rem;
   line-height: 29px;
 }
 
 @mixin logo-add {
   font-family: $roboto-mono-regular-font;
   font-weight: 500;
-  font-size: 12px;
+  font-size: 0.75rem;
   color: $grey-color;
 }
 
 @mixin footer-title {
   font-family: $roboto-mono-regular-font;
-  font-size: 15px;
+  font-size: 0.9375rem;
   text-transform: uppercase;
 }
 
 @mixin footer-list-item {
   font-family: $pt-mono-regular-font;
-  font-size: 15px;
+  font-size: 0.9375rem;
   color: $header-bg-color;
   font-weight: normal;
   text-decoration: none;
@@ -177,7 +177,7 @@
 
 @mixin footer-copyrights {
   font-family: $pt-mono-regular-font;
-  font-size: 13px;
+  font-size: 0.8125rem;
   line-height: 24px;
   color: $header-bg-color;
   font-weight: normal;
