Исправляю некоторые замечания наставника

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -20,6 +20,12 @@
   padding-bottom: 70px;
   border: 1px solid $border-color;
   border-left: 3px solid $blue-color;
+  
+  &:hover {
+    color: $white-color;
+    background-color: $light-grey;
+    border: none;
+  }
 
   &:active {
     color: $white-color;
