--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -56,10 +56,11 @@
 .services__button {
   @include blue-button;
   position: absolute;
-  width: 63px;
+  min-width: 63px;
   height: 63px;
   bottom: 0;
   right: 0;
+  left: auto;
   z-index: 30;
   border: none;
   background-image: url("../../img/icon-more.svg");
@@ -81,7 +82,7 @@
   }
 
   .services__item {
-    width: 100%;
+    width: 93%;
     min-height: 250px;
     margin-right: 30px;
   }
