Исправляю замечание что при наведении на любые кнопки, логотип и интерактивные блоки не установлен курсор Pointer

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -20,7 +20,8 @@
   padding-bottom: 70px;
   border: 1px solid $border-color;
   border-left: 3px solid $blue-color;
-  
+  cursor: pointer;
+
   &:hover {
     color: $white-color;
     background-color: $light-grey;
