исправляю цвет шрифта в футере и разделе о компании

--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -63,6 +63,7 @@
   left: auto;
   z-index: 30;
   border: none;
+  border-radius: 0;
   background-image: url("../../img/icon-more.svg");
   background-size: 15px 10px;
   background-repeat: no-repeat;
