--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -45,9 +45,11 @@
 }
 
 .form__label {
+  font-family: $pt-mono-regular-font;
   @include white-link;
   width: 50%;
   opacity: 0.8;
+  letter-spacing: 0.05em;
 }
 
 .form__input-checkbox {
