--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -16,6 +16,8 @@
   font-family: $roboto-mono-regular-font;
   text-transform: uppercase;
   font-size: 5rem;
+  line-height: 94px;
+  letter-spacing: 0.07em;
 }
 
 .promo__description {
