--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -55,6 +55,7 @@
   border: 1px solid $white-color;
   border-radius: 5px;
   cursor: pointer;
+  letter-spacing: 0.05em;
 
   &:hover {
     color: #dbdbdb;
@@ -78,6 +79,7 @@
   font-weight: bold;
   text-transform: uppercase;
   cursor: pointer;
+  letter-spacing: 0.05em;
 
   &:hover {
     background-color: $light-blue-color;
@@ -100,6 +102,7 @@
   border: 1px solid $blue-color;
   border-radius: 5px;
   cursor: pointer;
+  letter-spacing: 0.05em;
 
   &:hover {
     border: 1px solid $light-blue-color;
@@ -176,6 +179,7 @@
   font-size: 0.9375rem;
   text-transform: uppercase;
   color: $header-bg-color;
+  letter-spacing: 0.05em;
 }
 
 @mixin footer-list-item {
@@ -183,6 +187,7 @@
   font-size: 0.9375rem;
   color: $header-bg-color;
   opacity: 0.5;
+  letter-spacing: 0.03em;
   font-weight: normal;
   text-decoration: none;
 }
@@ -193,6 +198,7 @@
   line-height: 24px;
   color: $header-bg-color;
   opacity: 0.5;
+  letter-spacing: 0.04em;
   font-weight: normal;
   text-decoration: none;
   text-transform: uppercase;
