--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -13,6 +13,20 @@
   }
 }
 
+.contacts__item--phone svg {
+  width: 17px;
+  height: 17px;
+}
+
+.contacts__item--mail svg {
+  width: 19px;
+  height: 14px;
+}
+
+.contacts__item:first-child {
+  margin-right: 57px;
+}
+
 .contacts__item a {
   color: $white-color;
   font-size: 16px;
@@ -22,12 +36,14 @@
 
 .contacts__text {
   @include white-link;
+  margin-left: 10px;
 }
 
 .contacts__button {
   @include white-button;
   margin-top: -18px;
   padding: 12px 27px;
+  font-family: $robotocondensedbold;
 }
 
 @media (max-width: $tablet-width) {
@@ -36,10 +52,24 @@
   }
 
   .contacts__item {
-    margin-right: 10px;
+    margin-right: 0;
+  }
+  
+  .contacts__item--phone svg {
+    width: 24px;
+    height: 24px;
   }
 
-  .contacts__button {
-    display: none;
+  .contacts__item--mail svg {
+    width: 25px;
+    height: 18px;
+  }
+  
+  .contacts__item:first-child {
+    margin-right: 0;
+  }
+  
+  .contacts__item--order-call {
+    @include visually-hiddens;
   }
 }
