--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -8,11 +8,11 @@
   @include page-size;
   @include flex-row;
   margin-bottom: 150px;
-  padding-top: 40px;
+  padding-top: 35px;
 }
 
 .header__logo {
-  width: 260px;
+  width: 200px;
 }
 
 .header__menu {
@@ -22,7 +22,7 @@
 }
 
 .header__contacts {
-  min-width: 65%;
+  min-width: 67%;
   align-items: center;
 }
 
@@ -42,11 +42,11 @@
   }
 
   .header__menu {
-    min-width: 150px;
+    min-width: 160px;
   }
 
   .header__contacts {
-    min-width: 90px;
+    min-width: 82px;
   }
 }
 
@@ -57,10 +57,20 @@
   }
 
   .header__wrapper {
+    padding-top: 15px;
     margin-bottom: 20px;
   }
 
   .header__logo {
-    width: 50px;
+    width: 38px;
+    height: 38px;
+  }
+  
+  .header__menu {
+    min-width: 140px;
+  }
+  
+  .header__contacts {
+    min-width: 70px;
   }
 }
