--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -31,3 +31,12 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Robotocondensedbold";
+  src: url("../fonts/Robotocondensedbold.woff2") format("woff"),
+    url("../fonts/Robotocondensedbold.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
