--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -13,23 +13,11 @@ $pt-mono-regular-font: "PTMono-Regular", "Arial", sans-serif;
 $pt-mono-bold-font: "RobotoMono-Bold", "Arial", sans-serif;
 $roboto-mono-bold-font: "RobotoMono-Bold", "Arial", sans-serif;
 $roboto-mono-regular-font: "RobotoMono-Regular", "Arial", sans-serif;
+$robotocondensedbold: "Robotocondensedbold", "Arial", sans-serif;
 
 $desktop-width: 1024px;
 $tablet-width: 1023px;
 $mobile-width: 767px;
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  border: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
 
 * {
   margin: 0;
