--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -5,22 +5,24 @@
 
 .advantages__list {
   @include cancel;
-  @include flex-row;
+  @include flex-wrap;
   @include container;
-  flex-wrap: wrap;
+  flex-wrap: wrap; 
 }
 
 .advantages__item {
   position: relative;
-  width: 44%;
+  max-width: 41%;
+  margin-right: 1%;
   margin-bottom: 20px;
   padding-top: 100px;
-  padding-left: 30px;
-  padding-right: 10px;
+  padding-left: 3%;
+  padding-right: 4%;
   padding-bottom: 70px;
   border: 1px solid $border-color;
   border-left: 3px solid $blue-color;
   cursor: pointer;
+  
 
   &:hover {
     color: $white-color;
@@ -42,6 +44,7 @@
 
   &--contractor:hover::before {
     background-image: url("../img/icon-people-active.svg");
+    border: 1px solid $blue-color;
   }
 
   &--price::before {
@@ -74,7 +77,7 @@
 
 .advantages__title {
   margin-bottom: 15px;
-  font-family: $roboto-mono-regular-font;
+  font-family: $robotocondensedbold;
   font-size: 24px;
   line-height: 34px;
   color: $blue-color;
@@ -88,29 +91,34 @@
 @media (max-width: $tablet-width) {
   .advantages__item {
     margin-bottom: 25px;
-    padding-left: 30px;
-    padding-right: 20px;
-    padding-top: 60px;
-    padding-bottom: 30px;
-    width: 41%;
+ //   padding-left: 28px;
+    padding-right: 4%;
+    padding-top: 65px;
+    padding-bottom: 20px;
+    max-width: 40%;
+    min-height: 100px;
   }
 
   .advantages__title {
-    font-size: 20px;
+    font-size: 24px;
+    margin-bottom: 12px;
   }
 }
 
 @media (max-width: $mobile-width) {
   .advantages__item {
-    width: 100%;
+    margin-right: 0;
+    max-width: 90%;
+    min-height: 138px;
+    margin-bottom: 22px;
     padding-top: 70px;
-    padding-right: 5px;
-    padding-left: 20px;
-    padding-bottom: 30px;
+    padding-right: 5%;
+    padding-left: 8%;
+    padding-bottom: 22px;
   }
 
   .advantages__title {
     font-size: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 7px;
   }
 }
