--- a/source/sass/fonts.scss
+++ b/source/sass/fonts.scss
@@ -36,7 +36,7 @@
   font-family: "Robotocondensedbold";
   src: url("../fonts/Robotocondensedbold.woff2") format("woff"),
     url("../fonts/Robotocondensedbold.woff2") format("woff2");
-  font-weight: 700;
+  font-weight: normal;
   font-style: normal;
 }
 
