--- a/source/sass/blocks/about-company.scss
+++ b/source/sass/blocks/about-company.scss
@@ -22,6 +22,7 @@
   @include button-text;
   @include blue-border-button;
   padding: 15px 50px;
+  margin-top: 15px;
 }
 
 @media (max-width: $mobile-width) {
