--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,18 +1,19 @@
 .advantages {
   @include page-size;
-  margin-bottom: 15px;
+  margin-bottom: 90px;
 }
 
 .advantages__list {
   @include cancel;
   @include flex-wrap;
   @include container;
-  flex-wrap: wrap; 
+  flex-wrap: wrap;
 }
 
 .advantages__item {
   position: relative;
   max-width: 41%;
+  min-height: 130px;
   margin-right: 1%;
   margin-bottom: 20px;
   padding-top: 100px;
@@ -22,7 +23,6 @@
   border: 1px solid $border-color;
   border-left: 3px solid $blue-color;
   cursor: pointer;
-  
 
   &:hover {
     color: $white-color;
@@ -92,7 +92,6 @@
 @media (max-width: $tablet-width) {
   .advantages__item {
     margin-bottom: 25px;
- //   padding-left: 28px;
     padding-right: 4%;
     padding-top: 65px;
     padding-bottom: 20px;
