--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -1,7 +1,7 @@
 .services {
   background-color: $header-bg-color;
-  padding-top: 80px;
-  padding-bottom: 150px;
+  padding-top: 85px;
+  padding-bottom: 110px;
 }
 
 .services__wrapper {
@@ -25,12 +25,12 @@
 .services__item {
   position: relative;
   margin-bottom: 20px;
-  padding-top: 50px;
-  padding-left: 50px;
+  padding-top: 54px;
+  padding-left: 3%;
   padding-right: 10px;
-  min-height: 400px;
+  min-height: 573px;
   max-height: 100%;
-  width: 24%;
+  width: 28%;
   background-size: 100%;
   background-color: transparent;
 
@@ -74,7 +74,9 @@
   position: relative;
   color: $white-color;
   font-size: 20px;
+  line-height: 30px;
   z-index: 10;
+  width: 50%;
 }
 
 @media (max-width: $tablet-width) {
