--- a/source/sass/blocks/about-office.scss
+++ b/source/sass/blocks/about-office.scss
@@ -1,10 +1,10 @@
 .about-office {
-  width: 45%;
+  width: 36%;
 }
 
 .about-office__title {
   @include footer-title;
-  margin-bottom: 30px;
+  margin-bottom: 22px;
 }
 
 .about-office__list {
@@ -18,6 +18,12 @@
 
 .about-office__toggle {
   @include toggle;
+}
+
+@media (max-width: $tablet-width) {
+  .about-office {
+    width: 49%;
+  }
 }
 
 @media (max-width: $mobile-width) {
