--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  padding-top: 55px;
+  padding-top: 64px;
   padding-bottom: 55px;
   background-color: $footer-bg-color;
 }
@@ -24,6 +24,10 @@
 }
 
 @media (max-width: $tablet-width) {
+  .footer {
+    padding-top: 20px;
+  }
+  
   .footer__wrapper {
     @include flex-column;
     width: 100%;
@@ -31,22 +35,27 @@
 
   .footer__left {
     border-bottom: 1px solid #626962;
-    padding-bottom: 25px;
+    padding-bottom: 30px;
   }
 
   .footer__left-wrapper {
     @include page-size;
     @include flex-row;
   }
+  
+  .footer__up {
+    padding-bottom: 36px;
+  }
 
   .footer__copyrights-tablet {
     @include footer-copyrights;
     display: block;
+    padding-top: 18px;
   }
 
   .footer__about {
     @include page-size;
-    padding-top: 30px;
+    padding-top: 35px;
   }
 }
 
