--- a/source/sass/blocks/services.scss
+++ b/source/sass/blocks/services.scss
@@ -1,6 +1,6 @@
 .services {
   background-color: $header-bg-color;
-  padding-top: 85px;
+  padding-top: 90px;
   padding-bottom: 110px;
 }
 
@@ -25,12 +25,12 @@
 .services__item {
   position: relative;
   margin-bottom: 20px;
-  padding-top: 54px;
-  padding-left: 3%;
+  padding-top: 55px;
+  padding-left: 4%;
   padding-right: 10px;
-  min-height: 573px;
+  min-height: 566px;
   max-height: 100%;
-  width: 28%;
+  width: 27%;
   background-size: 100%;
   background-color: transparent;
 
@@ -83,11 +83,22 @@
   .services__list {
     @include flex-column;
   }
+  
+  .services {
+    padding-top: 45px;
+    padding-bottom: 35px;
+  }
 
   .services__item {
     width: 93%;
-    min-height: 250px;
+    min-height: 218px;
     margin-right: 30px;
+    padding-top: 35px;
+    padding-left: 6%;
+    margin-bottom: 47px;
+  }
+  .services__info {
+    width: 29%;
   }
 }
 
