Делаю якорную ссылку получить бесплатную консультацию

--- a/source/sass/blocks/about-company.scss
+++ b/source/sass/blocks/about-company.scss
@@ -56,6 +56,10 @@
   .about-company__icon {
     display: none;
   }
+  
+  .about-company__explanation {
+    width: 100%;
+  }
 
   .about-company {
     margin-bottom: 40px;
