--- a/source/sass/blocks/stay.scss
+++ b/source/sass/blocks/stay.scss
@@ -8,7 +8,7 @@
   background-image: url("../../img/paper_airplane.png");
   background-position: 80px 80px;
   background-repeat: no-repeat;
-  background-size: 380px 200px;
+  background-size: 40% 60%;
 }
 
 .stay__wrapper {
