--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -90,10 +90,12 @@
   font-size: 1rem;
   border: none;
   border-radius: 5px;
+  text-decoration: none;
   font-weight: bold;
   text-transform: uppercase;
   cursor: pointer;
   letter-spacing: 0.05em;
+  padding: 10px;
 
   &:hover {
     background-color: $light-blue-color;
@@ -271,11 +273,11 @@
   position: absolute;
   z-index: 5;
 
-  &:hover {
+  &::hover {
     opacity: 0.3;
   }
 
-  &:active {
+  &::active {
     opacity: 0.1;
   }
 }
