--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -95,7 +95,6 @@
   text-transform: uppercase;
   cursor: pointer;
   letter-spacing: 0.05em;
-  padding: 10px;
 
   &:hover {
     background-color: $light-blue-color;
@@ -309,7 +308,7 @@
 }
 
 @mixin text-area {
-  color: $white-color;
+  color: $black-color;
   background-color: rgba(255, 255, 255, 0.1);
   width: 100%;
   padding: 15px;
@@ -323,11 +322,14 @@
   &:active,
   &:focus {
     background-color: rgba(255, 255, 255, 0.9);
-    color: $black-color;
   }
   
   @media (max-width: $tablet-width) {
     height: 130px;
+  }
+  &::placeholder {
+    color: $white-color;
+    font-size: 16px;
   }
 }
 
