--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -301,6 +301,10 @@
     @include main-text;
     color: $white-color;
   }
+  &::placeholder:active,
+  &::placeholder:focus {
+    color: $black-color;
+  }
 
   @media (max-width: $tablet-width) {
     padding: 20px 5%;
@@ -311,17 +315,19 @@
   color: $black-color;
   background-color: rgba(255, 255, 255, 0.1);
   width: 100%;
-  padding: 15px;
+  padding: 15px 5%;
   border: none;
   resize: none;
 
   &:hover {
     background-color: rgba(255, 255, 255, 0.5);
+    color: $black-color;
   }
 
   &:active,
   &:focus {
     background-color: rgba(255, 255, 255, 0.9);
+    color: $black-color;
   }
   
   @media (max-width: $tablet-width) {
