--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -27,3 +27,5 @@
 // popup
 @import "blocks/popup.scss";
 @import "blocks/popup-form.scss";
+@import "blocks/popup-mistake.scss";
+@import "blocks/popup-success.scss";
