--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -10,6 +10,7 @@
 @import "blocks/promo.scss";
 
 // main
+@import "blocks/main.scss";
 @import "blocks/about-company.scss";
 @import "blocks/advantages.scss";
 @import "blocks/services.scss";
